# futil

./: .gitignore  Makefile  README.md  append.c  arg.c  array.c  autoArray.c  autoEncList.c  concat.c  cons.c  consArray.c  cons_.c  contains.c  cycle.c  dec.c  default.nix  delay.c  drop.c  enc.c  enumFromTo.c  filter.c  forever.c  input.c  iterate.c  lambda.c  length.c  lines.c  listToArray.c  map.c  mapArray.c  mapIO.c  mapM.c  mapTuple.c  output.c  readFile.c  readList.c  redraw.c  repeat.c  take.c  tests.sh  (+7 more)
headers/: futil.h
lib/: libfutil.c
reference/: CHANGELOG.md  Discover.hs  Futil.hs  LICENSE  Main.hs  futil.cabal
sp/: all.do  bracket.c  calc.c  concat.c  cons.c  default.do  default.o.do  enum.c  fix.c  flatmap.c  flatmaps.c  format.c  futil.c  futil.h  length.c  lift.c  lines.c  list.c  table.c  take.c  test.sh  timeout.c  unlines.c  zip2.c
