cabal-version:       >=1.10
name:                futil
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Luke Clifton
maintainer:          lukec@themk.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable futil
  main-is:             Main.hs
  other-modules: Discover, Futil
  -- other-extensions:
  build-depends:       base >=4.12 && <5, unix, bytestring, shh >= 0.7.0.8, pipes, pipes-bytestring, free, microlens, pipes-group, optparse-applicative, pipes-safe, mtl, process, pipes-parse, async, monad-control, safe, megaparsec, template-haskell, containers
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options: -threaded
